RESOLVED FIXED228158
macOS key-driven smooth scrolling does not work with subframes and overflow:scroll
https://bugs.webkit.org/show_bug.cgi?id=228158
Summary macOS key-driven smooth scrolling does not work with subframes and overflow:s...
Dana Estra
Reported 2021-07-21 12:36:59 PDT
macOS key-driven smooth scrolling does not work with subframes and overflow:scroll
Attachments
Radar WebKit Bug Importer
Comment 1 2021-07-21 12:38:47 PDT
EWS
Comment 2 2022-06-08 14:24:23 PDT
Committed r295394 (251400@main): <https://commits.webkit.org/251400@main> Reviewed commits have been landed. Closing PR #1388 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.